# candle-light-alert-lambda

./: .gitignore  Makefile  README.md  lambda_function.py  pyproject.toml
src/: lambda_function.py
tests/: test_lambda_function.py
