[tool.poetry]
name = "candle-lighting"
version = "0.1.0"
description = ""
authors = ["Elad Asaf <Elad220@gmail.com>"]
readme = "README.md"
packages = [{include = "candle_lighting"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
datetime = "^5.1"
aws-lambda-powertools = "^2.11.0"
pytest = "^7.2.2"
jmespath = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
